--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "resize-observer",
   "version": "0.0.3",
+  "description": "An implementation and polyfill of the Resize Observer draft.",
   "main": "resize-observer.js",
   "scripts": {
     "test": "npm run lint && mocha",
