--- a/package.json
+++ b/package.json
@@ -60,11 +60,10 @@
     "coveralls": "^2.11.9",
     "eslint": "^2.12.0",
     "istanbul": "^0.4.3",
-    "jsdom": "^9.2.1",
+    "jsdom": "^11.6.2",
     "mocha": "^2.5.3",
     "mocha-lcov-reporter": "^1.2.0",
-    "mock-browser": "^0.92.12",
-    "mock-raf": "0.0.2",
+    "mock-raf": "^1.0.0",
     "sinon": "^1.17.4",
     "typescript": "^3.0.1",
     "uglify-es": "^3.3.9"
