--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resize-observer",
-  "version": "0.1.1",
+  "version": "1.0.0-alpha.0",
   "description": "An implementation and polyfill of the Resize Observer draft.",
   "main": "lib/ResizeObserver.js",
   "typings": "lib/ResizeObserver.d.ts",
